--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -17,10 +17,14 @@
         {% endif %}
     </ul>
 </div>
+
 <div id="content">
     {% block content %}
     {% endblock %}
 </div>
+
+{% block include_js %}
+{% endblock %}
 <script>
     document.addEventListener('DOMContentLoaded', (event) => {
 
