--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -26,7 +26,7 @@
             </form>
         {% else %}
             <a href="{% url "student_registration" %}" class="button">
-                Register to enroll
+                Log-in to enroll
             </a>
         {% endif %}
         </div>
